# gf180mcu-precheck

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  flake.nix  precheck.py
.github/workflows/: ci.yml  docker-publish.yml
assets/: gf180mcu_render.lyp
assets/golden_masks/: extract_mask.drc  mask_0p5x0p5.gds  mask_0p5x1.gds  mask_1x0p5.gds  mask_1x1.gds
docs/plans/: 2025-01-26-precheck-api-server-design.md
precheck_server/: __main__.py  app.py  auth.py  database.py  queue_processor.py
scripts/: dev-shell  extract-versions.py  push_image_tags.py  verify_precheck_docker.py  version-info
scripts/klayout/: check_mask.drc  check_size.py  check_top.py  generate_id.py  qr_code_pcell.py  read_layout.py  read_write.py  zero_area.drc
scripts/klayout/pcell_library/: __init__.py  draw_qrcode.py  layers.py  marker.py  qrcode.py
scripts/klayout/qrcode_library/: __init__.py  draw_qrcode.py  layers.py  qrcode.py
server/: README.md  config.example.toml  pyproject.toml
server/docs/: 2025-01-26-api-server-implementation.md
server/examples/: curl.md  run_precheck.py
server/precheck_server/: __init__.py  __main__.py  app.py  cleanup.py  config.py  database.py  docker_client.py  models.py  queue_processor.py
server/tests/: __init__.py  conftest.py  test_app.py  test_auth.py  test_cleanup.py  test_config.py  test_database.py  test_docker_client.py  test_integration.py  test_queue_processor.py
tests/: test_database.py
